// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualBadge component rendering it should render according to theme: ContextualBadge Custom Theme 1`] = `
<span
  className="NatDSContextualBadge-root-10 NatDSContextualBadge-primary-15"
  data-type="standard"
  id="with-theme"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each type: ContextualBadge Types 1`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-primary-6"
  data-type="standard"
  id="standard"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render the default color and default type: ContextualBadge Default Color And Type 1`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-primary-6"
  data-type="standard"
  id="default"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 1`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-dark-2"
  data-type="standard"
  id="dark"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 2`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-error-3"
  data-type="standard"
  id="error"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 3`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-light-5"
  data-type="standard"
  id="light"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 4`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-info-4"
  data-type="standard"
  id="info"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 5`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-primary-6"
  data-type="standard"
  id="primary"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 6`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-secondary-7"
  data-type="standard"
  id="secondary"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 7`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-success-8"
  data-type="standard"
  id="success"
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering should render each color: ContextualBadge Colors 8`] = `
<span
  className="NatDSContextualBadge-root-1 NatDSContextualBadge-warning-9"
  data-type="standard"
  id="warning"
>
  Mock
</span>
`;
